# Tree_Classification_and_Individualization_In_Marsh_Area

./: .gitignore  LICENSE  README.md
OostTree/: CMakeLists.txt
OostTree/LASlib/: LASlib.vcxproj  lasfilter.cpp  lasindex.cpp  lasinterval.cpp  laspoint.hpp  lasreader.hpp  lasreader_txt.cpp  lasreadermerged.cpp  lasutility.cpp  laswriter.cpp  laswriter_txt.cpp  mydefs.hpp
OostTree/OostTree/: Source.cpp  TreeClassifier.cpp  TreeClassifier.h
OostTree/TreeClassification/: CMakeLists.txt  Source.cpp  TreeClassifier.cpp  TreeClassifier.h
OostTree/TreeIndividualization/: CMakeLists.txt  FoxTree.cpp  FoxTree.h  Source.cpp  nanoflann.hpp
Trees/: CMakeLists.txt
Trees/cmake/: Trees3DConfig.cmake.in  Trees3DConfigVersion.cmake.in
Trees/examples/: CMakeLists.txt
Trees/examples/tree_classification/: main.cpp
Trees/examples/tree_individualization/: CMakeLists.txt  main.cpp
Trees/resources/data/tree_classification/input/: Plot_1.laz  Plot_10.laz  Plot_11.laz  Plot_13.laz  Plot_16.laz  Plot_18.laz  Plot_2.laz  Plot_5.laz  Plot_7.laz  Plot_9.laz
Trees/resources/data/tree_classification/output/: Plot_1.laz.xyz  Plot_10.laz.xyz  Plot_11.laz.xyz  Plot_12.laz.xyz  Plot_14.laz.xyz  Plot_15.laz.xyz  Plot_16.laz.xyz  Plot_17.laz.xyz  Plot_18.laz.xyz  Plot_19.laz.xyz  Plot_2.laz.xyz  Plot_20.laz.xyz  Plot_3.laz.xyz  Plot_4.laz.xyz  Plot_5.laz.xyz  Plot_6.laz.xyz  Plot_7.laz.xyz  Plot_8.laz.xyz  Plot_9.laz.xyz
Trees/resources/data/tree_individualization/input/: Patch_1.laz  Patch_13.las  Patch_2.laz  Patch_20.las  Patch_3.laz  Patch_5.las  Patch_6.las  Patch_7.las  Patch_8.las
Trees/resources/data/tree_individualization/output/: Patch_1.laz.xyz  Patch_10.las.xyz  Patch_11.las.xyz  Patch_12.las.xyz  Patch_13.las.xyz  Patch_14.las.xyz  Patch_15.las.xyz  Patch_16.las.xyz  Patch_17.las.xyz  Patch_18.las.xyz  Patch_19.las.xyz  Patch_2.laz.xyz  Patch_20.las.xyz  Patch_3.laz.xyz  Patch_4.las.xyz  Patch_5.las.xyz  Patch_6.las.xyz  Patch_7.las.xyz  Patch_8.las.xyz  Patch_9.las.xyz
Trees/trees3d/tree_classification/: BasicStructures.h  CMakeLists.txt  TreeClassifier.cpp  resource.hpp
Trees/trees3d/tree_individualization/: CMakeLists.txt
data/IndividualTrees/1_GroundTruth_Groups/1_Easy/: Patch_10.las
data/IndividualTrees/1_GroundTruth_Groups/2_Median/: Patch_16.las  Patch_17.las  Patch_2.las  Patch_20.las  Patch_3.las  Patch_9.las
data/IndividualTrees/2_IndividualizedTrees_Results/: Patch_10.las.xyz  Patch_11.las.xyz  Patch_12.las.xyz  Patch_13.las.xyz  Patch_14.las.xyz  Patch_15.las.xyz  Patch_18.las.xyz  Patch_2.las.xyz  Patch_3.las.xyz  Patch_4.las.xyz  Patch_5.las.xyz  Patch_9.las.xyz
data/IndividualTrees/2_IndivudalizedTrees_Results/: Patch_1.las.xyz  Patch_16.las.xyz  Patch_17.las.xyz  Patch_19.las.xyz  Patch_20.las.xyz  Patch_6.las.xyz  Patch_7.las.xyz  Patch_8.las.xyz
data/Trees&NonTrees/1_GroundTruth/: Plot_1.laz.xyz  Plot_10.laz.xyz  Plot_12.laz.xyz  Plot_14.laz.xyz  Plot_15.laz.xyz  Plot_17.laz.xyz  Plot_20.laz.xyz  Plot_3.laz.xyz  Plot_5.laz.xyz  Plot_6.laz.xyz  Plot_8.laz.xyz  Plot_9.laz.xyz
data/Trees&NonTrees/2_Trees_NonTrees_Results/: Plot_1.laz.xyz  Plot_10.laz.xyz  Plot_11.laz.xyz  Plot_12.laz.xyz  Plot_13.laz.xyz  Plot_14.laz.xyz  Plot_15.laz.xyz  Plot_16.laz.xyz  Plot_17.laz.xyz  Plot_18.laz.xyz  Plot_19.laz.xyz  Plot_2.laz.xyz  Plot_20.laz.xyz  Plot_3.laz.xyz  Plot_4.laz.xyz  Plot_5.laz.xyz  Plot_6.laz.xyz  Plot_7.laz.xyz  Plot_8.laz.xyz  Plot_9.laz.xyz
examples/tree_classification/: CMakeLists.txt
resources/data/tree_classification/input/: Plot_12.laz  Plot_14.laz  Plot_15.laz  Plot_17.laz  Plot_19.laz  Plot_20.laz  Plot_3.laz  Plot_4.laz  Plot_6.laz  Plot_8.laz
resources/data/tree_individualization/input/: Patch_10.las  Patch_11.las  Patch_12.las  Patch_14.las  Patch_15.las  Patch_16.las  Patch_17.las  Patch_18.las  Patch_19.las  Patch_4.las  Patch_9.las
resources/validation_data/tree_classification/: Plot_11.laz.xyz  Plot_13.laz.xyz  Plot_16.laz.xyz  Plot_18.laz.xyz  Plot_19.laz.xyz  Plot_2.laz.xyz  Plot_4.laz.xyz  Plot_7.laz.xyz
resources/validation_data/tree_individualization/1_Easy/: Patch_1.las  Patch_19.las  Patch_5.las  Patch_6.las
resources/validation_data/tree_individualization/2_Median/: Patch_13.las  Patch_14.las  Patch_7.las  Patch_8.las
resources/validation_data/tree_individualization/3_Hard/: Patch_11.las  Patch_12.las  Patch_15.las  Patch_18.las  Patch_4.las
src/LASlib/: LASlib.vcxproj.filters  ReadMe.txt  lasdefinitions.hpp  lasfilter.hpp  lasreader.cpp  lasreader_las.cpp  lasreader_las.hpp  lasreader_txt.hpp  lasreadermerged.hpp  lastransform.cpp  laswriter_las.hpp
src/TreeClassification/: BasicStructure.h  TreeClassifier.h  nanoflann.hpp
src/TreeClassification/release/: CMakeCache.txt
src/TreeIndividualization/: CMakeLists.txt
src/TreeIndividualization/src/: CMakeLists.txt  Source.cpp
src/TreeIndividualization/src/release/: CMakeCache.txt
trees3d/: CMakeLists.txt
trees3d/tree_classification/: TreeClassifier.h
trees3d/tree_individualization/: FoxTree.cpp  FoxTree.h  resource.hpp
